fix: remove spacing unit from root container

--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -43,6 +43,4 @@ body {
     padding: 0 var(--spacing-unit-1);
   }
 }
-.root {
-  margin-bottom: var(--spacing-unit-2);
-}
+
